# rust-on-nails-1

./: README.md
.devcontainer/: Dockerfile
crates/db/migrations/: 20240420194032_user_table.sql
crates/db/queries/: users.sql
crates/grpc-api/: Cargo.toml  build.rs
crates/grpc-api/protos/: api.proto
crates/grpc-api/src/: lib.rs
crates/statics/: .gitignore  Cargo.toml  package-lock.json  package.json
crates/statics/scss/: foo.scss  style.scss
crates/statics/src/: build.rs  lib.rs
crates/statics/templates/: page.rs.html
crates/ui-components/: Cargo.toml
crates/ui-components/src/: layout.rs  users.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: main.rs
