[package]
name = "grpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { version = "0.1.0", path = "../db" }
prost = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
